ZIG-925: Fix dark mode colors

--- a/src/components/TraderCard/TraderCard.scss
+++ b/src/components/TraderCard/TraderCard.scss
@@ -17,5 +17,6 @@
 [data-theme="dark"] {
   .traderCard {
     background: $lightBlackBackground;
+    border-color: $darkBorderColor;
   }
 }
