--- a/src/components/TraderCard/TraderCardBody/TraderCardBody.scss
+++ b/src/components/TraderCard/TraderCardBody/TraderCardBody.scss
@@ -113,3 +113,17 @@
     }
   }
 }
+
+[data-theme="dark"] {
+  .traderCardBody {
+    .actionsWrapper {
+      &.positive {
+        background: linear-gradient(180deg, $darkGreenChartBottom 0%, #151521 100%);
+      }
+
+      &.negative {
+        background: linear-gradient(180deg, $darkRedChartBottom 0%, #151521 100%);
+      }
+    }
+  }
+}
